package app.utils;

public enum LogStatus
{
    DONE,
    FAILED
}
