package app.utils;

public enum UserRole
{
    TECHNICIAN,
    MANAGER,
    ADMIN
}
